syntax = "proto3";
package feature_toggle_api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service FeatureToggleService {
    rpc GetFeaturesForProperties (GetFeaturesByPropertiesRequest) returns (GetFeaturesByPropertiesResponse) {
        option (google.api.http) = { get: "/featuretree/features"};
    }
    rpc CreateToggleRule (CreateToggleRuleRequest) returns (CreateToggleRuleResponse) {
        option (google.api.http) = { post: "/togglerule" body:"*" };
    }
    rpc ReadToggleRule (ReadToggleRuleRequest) returns (ReadToggleRuleResponse) {
        option (google.api.http) = { get: "/togglerule/{id}" };
    }
    rpc DeleteToggleRule (DeleteToggleRuleRequest) returns (DeleteToggleRuleResponse) {
        option (google.api.http) = { delete: "/togglerule/{id}" };
    }
    rpc SearchToggleRule (SearchToggleRuleRequest) returns (SearchToggleRuleResponse) {
        option (google.api.http) = { get: "/togglerule" };
    }

    rpc CreateFeature (CreateFeatureRequest) returns (CreateFeatureResponse) {
        option (google.api.http) = { post: "/feature" body:"*" };
    }
    rpc ReadFeature (ReadFeatureRequest) returns (ReadFeatureResponse) {
        option (google.api.http) = { get: "/feature/{id}" };
    }
    rpc DeleteFeature (DeleteFeatureRequest) returns (DeleteFeatureResponse) {
        option (google.api.http) = { delete: "/feature/{id}" };
    }
    rpc SearchFeature (SearchFeatureRequest) returns (SearchFeatureResponse) {
        option (google.api.http) = { get: "/feature" };
    }

    rpc CreateProperty (CreatePropertyRequest) returns (CreatePropertyResponse) {
        option (google.api.http) = { post: "/property" body:"*" };
    }
    rpc ReadProperty (ReadPropertyRequest) returns (ReadPropertyResponse) {
        option (google.api.http) = { get: "/property/{name}" };
    }
    rpc DeleteProperty (DeletePropertyRequest) returns (DeletePropertyResponse) {
        option (google.api.http) = { delete: "/property/{name}" };
    }
    rpc SearchProperty (SearchPropertyRequest) returns (SearchPropertyResponse) {
        option (google.api.http) = { get: "/property" };
    }
}

message GetFeaturesByPropertiesRequest {
    map<string, string> properties = 1;
}

message GetFeaturesByPropertiesResponse {
    repeated string features = 1;
}

message CreateToggleRuleRequest {
    ToggleRule toggleRule = 1;
}

message CreateToggleRuleResponse {
    string id = 1;
}

message ReadToggleRuleRequest {
    string id = 1;
}

message ReadToggleRuleResponse {
    ToggleRule toggleRule = 1;
}

message DeleteToggleRuleRequest {
    string id = 1;
}

message DeleteToggleRuleResponse {
}

message SearchToggleRuleRequest {
    string name = 1;
    bool enabled = 2;
    google.protobuf.Timestamp createdStart = 3;
    google.protobuf.Timestamp createdEnd = 4;
    google.protobuf.Timestamp expiresStart = 5;
    google.protobuf.Timestamp expiresEnd = 6;
    map<string, string> properties = 7;
}

message SearchToggleRuleResponse {
    repeated ToggleRule toggleRules = 1;
}

message ToggleRule {
    string id = 1;
    string name = 2;
    bool enabled = 3;
    google.protobuf.Timestamp created = 4;
    google.protobuf.Timestamp expires = 5;
    map<string, string> properties = 6;
}


message CreateFeatureRequest {
    Feature feature = 1;
}

message CreateFeatureResponse {
    string id = 1;
}

message ReadFeatureRequest {
    string id = 1;
}

message ReadFeatureResponse {
    Feature feature = 1;
}

message DeleteFeatureRequest {
    string id= 1;
}

message DeleteFeatureResponse {
}

message SearchFeatureRequest {
    string name = 1;
}

message SearchFeatureResponse {
    repeated Feature features = 1;
}

message Feature {
    string id = 1;
    string name = 2;
    bool enabled = 3;
    string description = 4;
}

message CreatePropertyRequest {
    Property property = 1;
}

message CreatePropertyResponse {
    string name = 1;
}

message ReadPropertyRequest {
    string name = 1;
}

message ReadPropertyResponse {
    Property Property = 1;
}

message DeletePropertyRequest {
    string name = 1;
}

message DeletePropertyResponse {
}

message SearchPropertyRequest {
    string name = 1;
}

message SearchPropertyResponse {
    repeated Property properties = 1;
}

message Property {
    string name = 1;
    string description = 2;
}